platform/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: dev-registry
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: registry
