platform/registry/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: registry
  namespace: dev-registry
spec:
  to:
    kind: Service
    name: registry
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
